<resources>
    <!--General-->
    <string name="app_name">Lumpia Shmompia Now</string>
    <string name="short_app_name">Lumpia Shmompia</string>
    <string name="lumpia_shmompia">Lumpia Shmompia</string>

    <!--Ads-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Widget-->
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="previous_order">Previous Order:</string>

    <!--Accessibility-->
    <string name="container_for_relevant_food_image">container for relevant food image</string>
    <string name="image_container_for_reorder_button">Image container for reorder button</string>
    <string name="image_container_for_menu_button">Image container for menu button</string>
    <string name="image_container_for_about_lumpia_shmompia_button">Image container for about Lumpia Shmompia button</string>
    <string name="checkout_button">Button to add to checkout list</string>
    <string name="location_icon_image">location icon image</string>
    <string name="owner_icon_image">owner icon image</string>
    <string name="established_date_icon_image">established date icon image</string>
    <string name="banner_image_container">banner image container</string>
    <string name="item_image_container">item image container</string>
    <string name="image_container_for_current_weather">image container for current weather</string>

    <!--Main Activity-->
    <string name="explore_menu">Explore Menu</string>

    <!--About Activity-->
    <string name="mission_statement_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Praesent pulvinar ex in nulla pretium elementum. Nullam vitae odio ipsum.
        Nam massa justo, condimentum a sapien et, imperdiet cursus orci.
        Morbi diam libero, tempus sed laoreet eu, lacinia in risus. Phasellus lacinia suscipit erat,
        at lacinia sem pretium euismod. Duis lobortis viverra libero sed fringilla. Integer in dolor sem.
        Suspendisse potenti. Nulla interdum, velit vel blandit finibus, orci ante lacinia enim, in
        elementum ante urna ullamcorper enim. Curabitur elementum justo et diam blandit, et varius
        risus mattis. Suspendisse ante magna, cursus in nulla in, faucibus porttitor ex.
        Donec mollis vehicula nisi, a iaculis orci rhoncus vitae. Sed id mollis neque.
        Quisque vitae eros commodo, finibus quam accumsan, aliquam lectus. Fusce lobortis tincidunt
        neque eget iaculis. Quisque accumsan porttitor eros, sit amet pellentesque nibh rhoncus vel.</string>
    <string name="mission_statement">Mission Statement</string>
    <string name="october_12_2017">October 12, 2017</string>
    <string name="take_me_to_lumpia_shmompia">Take Me To Lumpia Shmompia!</string>
    <string name="carlo_antonio_bilbao">Carlo Antonio Bilbao</string>
    <string name="map">Map</string>
    <string name="_554_ygnacio_valley_rd_walnut_creek_ca">554 Ygnacio Valley Rd, Walnut Creek, CA</string>
    <string name="about_lumpia_shmompia">About Lumpia Shmompia</string>
    <string name="map_uri"><![CDATA[https://www.google.com/maps/search/?api=1&query=554+Ygnacio+Valley+Rd,+Walnut Creek]]></string>
    <string name="company_email">thescientistexplores@gmail.com</string>
    <string name="email_subject">ATTN: NEW ORDER</string>
    <string name="mailto">mailto:</string>

    <!--Details Activity-->
    <string name="description">Description</string>
    <string name="history">History</string>

    <!--Order Activity-->
    <string name="reorder_last_order">Reorder Last Order</string>
    <string name="total">Total:</string>
    <string name="send_order">Send Order</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="item_total">Item Total:</string>
    <string name="order">Order</string>
    <string name="_1">1</string>
    <string name="dollar_sign">$</string>
    <string name="one">1</string>

    <!--Menu Activity-->
    <string name="is_two_panel">isTwoPanel</string>

    <!--Toast-->
    <string name="nothing_in_cart">Nothing In Cart</string>
    <string name="already_in_cart">Already In Cart</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="no_previous_order">No Previous Order</string>
    <string name="video_failed_to_initialize">Video Failed to Initialize</string>

    <!--Misc-->
    <string name="cannot_query_uri">Cannot query unknown URI</string>
    <string name="failed_row_insert">Failed in insert row(s)</string>
    <string name="insert_not_supported">Insertion is not supported for</string>
    <string name="deletion_not_supported">Deletion is not supported for</string>
    <string name="equals_question">=?</string>
    <string name="must_implemen_quant_listener">must implement OnQuantityChangeListener</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="must_implement_menu_listener">must implement OnMenuItemClickListener</string>
    <string name="empty">Empty</string>
    <string name="unable_close_input_stream">Unable to close input stream</string>
    <string name="URL_creation_error">Error with creating URL</string>
    <string name="error_response_code">Error Response Code:</string>
    <string name="error_retrieving_json_results">Problem retrieving the JSON results.</string>
    <string name="from_json">From JSON:</string>
    <string name="problem_parsing_json">Problem parsing the earthquake JSON results</string>

</resources>
