<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/checkout_img"
        android:contentDescription="@string/item_image_container"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/order_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/quantity"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minus_button"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/minus"/>

                    <TextView
                        android:id="@+id/order_quant"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:text="@string/_1"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/plus_button"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/plus"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/item_total"/>

                <TextView
                    android:id="@+id/item_total_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>