<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.riskitbiskit.lumpiashmompianow.activities.MenuActivity"
    android:id="@+id/about_drawer_layout"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <!--Responsible for drawing icons-->
                <android.support.v7.widget.Toolbar
                    android:id="@+id/about_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    app:layout_scrollFlags="enterAlways|scroll">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#FFF"
                        android:text="@string/lumpia_shmompia"/>

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:contentDescription="@string/location_icon_image"
                            android:padding="8dp"
                            android:src="@drawable/ic_location_on_black_24dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/_554_ygnacio_valley_rd_walnut_creek_ca"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:contentDescription="@string/owner_icon_image"
                            android:padding="8dp"
                            android:src="@drawable/ic_person_outline_black_24dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/carlo_antonio_bilbao"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:contentDescription="@string/established_date_icon_image"
                            android:padding="8dp"
                            android:src="@drawable/ic_cake_black_24dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/october_12_2017"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:contentDescription="@string/image_container_for_current_weather"
                            android:padding="8dp"
                            android:src="@drawable/ic_brightness_5_black_24dp"/>

                        <TextView
                            android:id="@+id/current_weather"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/mission_statement"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textSize="14sp"
                        android:text="@string/mission_statement_lorem"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/map"/>

                    <fragment
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:layout_margin="16dp"
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:name="com.google.android.gms.maps.MapFragment"
                        map:cameraBearing="225"
                        map:cameraTargetLat="37.906795"
                        map:cameraTargetLng="-122.062847"
                        map:cameraTilt="65"
                        map:cameraZoom="25"
                        />

                    <Button
                        android:id="@+id/to_map_bt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/take_me_to_lumpia_shmompia"/>

                </LinearLayout>

            </ScrollView>

        </android.support.design.widget.CoordinatorLayout>

    </FrameLayout>

    <ListView
        android:id="@+id/about_left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="56dp"
        android:choiceMode="singleChoice"
        android:divider="@color/transparent"
        android:dividerHeight="0dp"
        android:background="#FFF"/>

</android.support.v4.widget.DrawerLayout>