<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/frag_detail_border"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@android:color/darker_gray">

                <TextView
                    android:id="@+id/frag_food_price_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="end|center_vertical"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="20sp"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/frag_food_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="20sp"
                android:text="@string/history"/>

            <TextView
                android:id="@+id/frag_food_history_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frag_detail_fab"
        android:src="@drawable/ic_add_white_24dp"
        android:contentDescription="@string/checkout_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        app:fabSize="normal"
        android:elevation="6dp"
        android:stateListAnimator="@animator/fab_state_list_anim"
        android:layout_gravity="bottom|end"/>

</FrameLayout>